--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ rvm:
   - 1.9.3
   - jruby-19mode # JRuby in 1.9 mode
   - rbx-19mode # currently in active development, may or may not work for your project
-  - ruby-head
+  # - ruby-head
 notifications:
   irc: "irc.freenode.org#adhearsion"
