--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 rvm:
   - 1.9.3
-  - 2.0.0
-  - 2.1.0
-  - jruby-19mode
+  - 2.2.5
+  - jruby-1.7.25
+  - jruby-9.1.5.0
   - rbx-2.1.1
   - ruby-head
 matrix:
