--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ rvm:
 jdk:
   - openjdk8 # for jruby
 before_install:
-  - rvm @global @default do gem uninstall bundler -a -x --silent || true
-  - gem install bundler -v '<2'
+  - gem install bundler || gem install bundler --version '<2'
 matrix:
   allow_failures:
     - rvm: rbx-2.1.1
